Initial release: Oraciones de la noche

--- a/content/pages/aviso-legal.mdx
+++ b/content/pages/aviso-legal.mdx
@@ -1,29 +1,29 @@
 ---
 slug: "aviso-legal"
 title: "Aviso Legal"
-metaTitle: "Aviso Legal - Oraciones para la ansiedad"
-metaDescription: "Aviso legal del sitio Oraciones para la ansiedad. Información sobre el uso del contenido, responsabilidad y propiedad intelectual."
+metaTitle: "Aviso Legal - Oraciones de la noche"
+metaDescription: "Aviso legal del sitio Oraciones de la noche. Información sobre el uso del contenido, responsabilidad y propiedad intelectual."
 keywords: ["aviso legal", "términos de uso", "información legal", "responsabilidad contenido", "propiedad intelectual", "uso del sitio", "condiciones legales"]
-publishedAt: "2026-01-02"
-updatedAt: "2026-01-02"
+publishedAt: "2026-01-08"
+updatedAt: "2026-01-08"
 category: "legal"
 ---
 
 ## Identificación del titular
 
-Este sitio web "Oraciones para la ansiedad" ofrece contenido espiritual para acompañar momentos de ansiedad.
+Este sitio web "Oraciones de la noche" ofrece contenido espiritual para acompañar el cierre del día con oración y reflexión.
 
 Para cualquier consulta relacionada con este aviso legal, puedes contactar a través de [Jesús Contigo](https://www.jesuscontigo.org/).
 
 ## Finalidad del sitio
 
-Este sitio tiene como finalidad ofrecer contenido espiritual en forma de oraciones, reflexiones y recursos de fe católica, específicamente orientados a acompañar momentos de ansiedad y búsqueda de paz interior. Todo el contenido se comparte con intención de apoyo espiritual y edificación personal.
+Este sitio tiene como finalidad ofrecer contenido espiritual en forma de oraciones, reflexiones y recursos de fe católica, específicamente orientados a cerrar el día, agradecer, pedir perdón y descansar en paz con Dios. Todo el contenido se comparte con intención de apoyo espiritual y edificación personal.
 
 ## Responsabilidad y uso del contenido
 
 El contenido de este sitio se ofrece con fines informativos y espirituales. El uso de cualquier oración, reflexión o recurso aquí compartido es bajo tu propio criterio y responsabilidad.
 
-**Importante: Este sitio no ofrece consejo médico, psicológico o terapéutico.** Si experimentas problemas de sueño persistentes, ansiedad severa, depresión u otras condiciones de salud mental o física, te recomendamos buscar ayuda de profesionales calificados. La oración es un recurso espiritual valioso que puede complementar, pero no reemplaza, la atención médica o psicológica profesional cuando es necesaria.
+**Importante: Este sitio no ofrece consejo médico, psicológico o terapéutico.** Si experimentas problemas de sueño persistentes, insomnio crónico, ansiedad severa, depresión u otras condiciones de salud mental o física, te recomendamos buscar ayuda de profesionales calificados. La oración es un recurso espiritual valioso que puede complementar, pero no reemplaza, la atención médica o psicológica profesional cuando es necesaria.
 
 No nos hacemos responsables por interpretaciones, usos o decisiones tomadas basándose exclusivamente en el contenido de este sitio. Cada persona es responsable de discernir cómo aplicar estos recursos espirituales en su vida particular.
 
@@ -51,4 +51,4 @@ Para cualquier pregunta, sugerencia o solicitud relacionada con este aviso legal
 
 ---
 
-Última actualización: 2026-01-02
+Última actualización: 2026-01-08
