--- a/content/pages/oracion-para-dar-gracias-por-las-bendiciones.mdx
+++ b/content/pages/oracion-para-dar-gracias-por-las-bendiciones.mdx
@@ -1,11 +1,11 @@
 ---
-slug: "oracion-para-dormir-en-paz"
-title: "Oración para dormir en paz y descansar en Dios"
-metaTitle: "Oración para dormir en paz y descansar en Dios"
-metaDescription: "Oración católica de la noche. Oración para dormir en paz y descansar en Dios. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
+slug: "oracion-para-dar-gracias-por-las-bendiciones"
+title: "Oración para dar gracias por las bendiciones recibidas"
+metaTitle: "Oración para dar gracias por las bendiciones recibidas"
+metaDescription: "Oración católica de la noche. Oración para dar gracias por las bendiciones recibidas. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
 keywords:
-  - "oracion para dormir en paz"
-  - "rezar para dormir en paz"
+  - "oracion para dar gracias por las bendiciones"
+  - "rezar para dar gracias por las bendiciones"
   - "oración nocturna"
   - "cerrar el día con dios"
 publishedAt: "2026-01-08"
@@ -25,7 +25,7 @@ Te pido perdón por mis fallas de hoy: las palabras que no edifiqué, las obras 
 
 Entrego en tus manos todo lo vivido: los momentos de alegría y los de dificultad, las decisiones tomadas y las pendientes. Confío en tu providencia amorosa.
 
-Calma mi mente inquieta y aquieta mis pensamientos. Llena mi corazón con tu paz, esa paz que sobrepasa todo entendimiento. Que pueda descansar confiado en tu amor.
+Gracias, Señor, por las bendiciones visibles e invisibles de hoy. Por las que reconocí y por las que no vi. Tu bondad es infinita.
 
 Señor, concédeme un descanso reparador. Renueva mis fuerzas mientras duermo. Que mañana despierte con esperanza para seguir tu camino con fidelidad y amor.
 
