--- a/content/pages/politica-de-privacidad.mdx
+++ b/content/pages/politica-de-privacidad.mdx
@@ -1,17 +1,17 @@
 ---
 slug: "politica-de-privacidad"
 title: "Política de Privacidad"
-metaTitle: "Política de Privacidad - Oraciones para la ansiedad"
-metaDescription: "Política de privacidad del sitio Oraciones para la ansiedad. Información sobre datos recopilados, uso, protección y derechos del usuario."
+metaTitle: "Política de Privacidad - Oraciones de la noche"
+metaDescription: "Política de privacidad del sitio Oraciones de la noche. Información sobre datos recopilados, uso, protección y derechos del usuario."
 keywords: ["política de privacidad", "protección de datos", "datos personales", "privacidad usuario", "cookies", "derechos del usuario", "seguridad información"]
-publishedAt: "2026-01-02"
-updatedAt: "2026-01-02"
+publishedAt: "2026-01-08"
+updatedAt: "2026-01-08"
 category: "legal"
 ---
 
 ## Introducción
 
-En "Oraciones para la ansiedad", respetamos tu privacidad y nos comprometemos a proteger cualquier información personal que compartas con nosotros. Esta política explica qué datos recopilamos, cómo los usamos y cuáles son tus derechos.
+En "Oraciones de la noche", respetamos tu privacidad y nos comprometemos a proteger cualquier información personal que compartas con nosotros. Esta política explica qué datos recopilamos, cómo los usamos y cuáles son tus derechos.
 
 ## Qué datos recopilamos
 
@@ -112,4 +112,4 @@ Responderemos a tu solicitud en el plazo establecido por la legislación aplicab
 
 ---
 
-Última actualización: 2026-01-02
+Última actualización: 2026-01-08
