--- a/content/pages/examen-de-conciencia-de-la-noche.mdx
+++ b/content/pages/examen-de-conciencia-de-la-noche.mdx
@@ -1,11 +1,11 @@
 ---
-slug: "oracion-para-dormir-en-paz"
-title: "Oración para dormir en paz y descansar en Dios"
-metaTitle: "Oración para dormir en paz y descansar en Dios"
-metaDescription: "Oración católica de la noche. Oración para dormir en paz y descansar en Dios. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
+slug: "examen-de-conciencia-de-la-noche"
+title: "Examen de conciencia de la noche para cerrar el día"
+metaTitle: "Examen de conciencia de la noche para cerrar el día"
+metaDescription: "Oración católica de la noche. Examen de conciencia de la noche para cerrar el día. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
 keywords:
-  - "oracion para dormir en paz"
-  - "rezar para dormir en paz"
+  - "examen de conciencia de la noche"
+  - "examen de conciencia de la noche"
   - "oración nocturna"
   - "cerrar el día con dios"
 publishedAt: "2026-01-08"
@@ -25,7 +25,7 @@ Te pido perdón por mis fallas de hoy: las palabras que no edifiqué, las obras 
 
 Entrego en tus manos todo lo vivido: los momentos de alegría y los de dificultad, las decisiones tomadas y las pendientes. Confío en tu providencia amorosa.
 
-Calma mi mente inquieta y aquieta mis pensamientos. Llena mi corazón con tu paz, esa paz que sobrepasa todo entendimiento. Que pueda descansar confiado en tu amor.
+Señor, ayúdame a revisar mi día con honestidad. Muéstrame dónde estuve lejos de tu amor y dónde fui instrumento de tu gracia. Que este examen me ayude a crecer.
 
 Señor, concédeme un descanso reparador. Renueva mis fuerzas mientras duermo. Que mañana despierte con esperanza para seguir tu camino con fidelidad y amor.
 
