--- a/content/pages/oracion-para-dormir-cuando-no-puedo-conciliar-el-sueno.mdx
+++ b/content/pages/oracion-para-dormir-cuando-no-puedo-conciliar-el-sueno.mdx
@@ -1,11 +1,11 @@
 ---
-slug: "oracion-para-dormir-en-paz"
-title: "Oración para dormir en paz y descansar en Dios"
-metaTitle: "Oración para dormir en paz y descansar en Dios"
-metaDescription: "Oración católica de la noche. Oración para dormir en paz y descansar en Dios. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
+slug: "oracion-para-dormir-cuando-no-puedo-conciliar-el-sueno"
+title: "Oración para dormir cuando no puedo conciliar el sueño"
+metaTitle: "Oración para dormir cuando no puedo conciliar el sueño"
+metaDescription: "Oración católica de la noche. Oración para dormir cuando no puedo conciliar el sueño. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
 keywords:
-  - "oracion para dormir en paz"
-  - "rezar para dormir en paz"
+  - "oracion para dormir cuando no puedo conciliar el sueno"
+  - "rezar para dormir cuando no puedo conciliar el sueno"
   - "oración nocturna"
   - "cerrar el día con dios"
 publishedAt: "2026-01-08"
@@ -25,7 +25,7 @@ Te pido perdón por mis fallas de hoy: las palabras que no edifiqué, las obras 
 
 Entrego en tus manos todo lo vivido: los momentos de alegría y los de dificultad, las decisiones tomadas y las pendientes. Confío en tu providencia amorosa.
 
-Calma mi mente inquieta y aquieta mis pensamientos. Llena mi corazón con tu paz, esa paz que sobrepasa todo entendimiento. Que pueda descansar confiado en tu amor.
+Señor, aunque el sueño no llegue, tu presencia me acompaña. Transforma esta vigilia en tiempo contigo. Aquieta mi mente y mi cuerpo cuando sea tu voluntad.
 
 Señor, concédeme un descanso reparador. Renueva mis fuerzas mientras duermo. Que mañana despierte con esperanza para seguir tu camino con fidelidad y amor.
 
