--- a/content/pages/oracion-para-terminar-el-dia-con-gratitud.mdx
+++ b/content/pages/oracion-para-terminar-el-dia-con-gratitud.mdx
@@ -1,11 +1,11 @@
 ---
-slug: "oracion-para-dormir-en-paz"
-title: "Oración para dormir en paz y descansar en Dios"
-metaTitle: "Oración para dormir en paz y descansar en Dios"
-metaDescription: "Oración católica de la noche. Oración para dormir en paz y descansar en Dios. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
+slug: "oracion-para-terminar-el-dia-con-gratitud"
+title: "Oración para terminar el día con gratitud"
+metaTitle: "Oración para terminar el día con gratitud"
+metaDescription: "Oración católica de la noche. Oración para terminar el día con gratitud. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
 keywords:
-  - "oracion para dormir en paz"
-  - "rezar para dormir en paz"
+  - "oracion para terminar el dia con gratitud"
+  - "rezar para terminar el dia con gratitud"
   - "oración nocturna"
   - "cerrar el día con dios"
 publishedAt: "2026-01-08"
@@ -25,7 +25,7 @@ Te pido perdón por mis fallas de hoy: las palabras que no edifiqué, las obras 
 
 Entrego en tus manos todo lo vivido: los momentos de alegría y los de dificultad, las decisiones tomadas y las pendientes. Confío en tu providencia amorosa.
 
-Calma mi mente inquieta y aquieta mis pensamientos. Llena mi corazón con tu paz, esa paz que sobrepasa todo entendimiento. Que pueda descansar confiado en tu amor.
+Gracias, Señor, por cada bendición recibida hoy. Por el trabajo, por el alimento, por las pequeñas alegrías. Que la gratitud sea el último sentimiento de mi día.
 
 Señor, concédeme un descanso reparador. Renueva mis fuerzas mientras duermo. Que mañana despierte con esperanza para seguir tu camino con fidelidad y amor.
 
