--- a/content/pages/oraciones-de-la-noche.mdx
+++ b/content/pages/oraciones-de-la-noche.mdx
@@ -1,11 +1,11 @@
 ---
-slug: "oracion-para-dormir-en-paz"
-title: "Oración para dormir en paz y descansar en Dios"
-metaTitle: "Oración para dormir en paz y descansar en Dios"
-metaDescription: "Oración católica de la noche. Oración para dormir en paz y descansar en Dios. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
+slug: "oraciones-de-la-noche"
+title: "Oraciones de la noche para cerrar el día en paz"
+metaTitle: "Oraciones de la noche para cerrar el día en paz"
+metaDescription: "Oración católica de la noche. Oraciones de la noche para cerrar el día en paz. Encuentra paz, consuelo y esperanza al cerrar tu día con Dios."
 keywords:
-  - "oracion para dormir en paz"
-  - "rezar para dormir en paz"
+  - "oraciones de la noche"
+  - "rezares de la noche"
   - "oración nocturna"
   - "cerrar el día con dios"
 publishedAt: "2026-01-08"
@@ -25,7 +25,7 @@ Te pido perdón por mis fallas de hoy: las palabras que no edifiqué, las obras 
 
 Entrego en tus manos todo lo vivido: los momentos de alegría y los de dificultad, las decisiones tomadas y las pendientes. Confío en tu providencia amorosa.
 
-Calma mi mente inquieta y aquieta mis pensamientos. Llena mi corazón con tu paz, esa paz que sobrepasa todo entendimiento. Que pueda descansar confiado en tu amor.
+Te encomiendo a todas las personas que amo. Bendice su descanso. Protege a los que sufren esta noche. Consuela a los que lloran. Que tu paz reine en los corazones.
 
 Señor, concédeme un descanso reparador. Renueva mis fuerzas mientras duermo. Que mañana despierte con esperanza para seguir tu camino con fidelidad y amor.
 
